@@ -1,6 +1,12 @@
 CHANGELOG RoundCube Webmail
 ---------------------------
 
+2006/09/08 (thomasb)
+----------
+- Fixed safe_mode problems (Bug #1418381)
+- Fixed wrong header encoding (Bug #1483976)
+
+
 2006/09/07 (thomasb)
 ----------
 - Made automatic draft saving configurable
